# dotfiles

./: .gitmodules  AGENTS.md  install.sh
bash/: .bash_profile  .bashrc
claude/: CLAUDE.md  settings.json  statusline-command.sh
claude-dash/: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
claude-dash/.scratch/claude-dash/issues/: 01-budget-pipeline-tracer.md  02-per-session-throughput.md  03-cca-wrapper-multi-session.md  04-session-lifecycle-history.md  05-cca-fail-open.md  06-budget-polish.md
claude-dash/docs/adr/: 0001-proxy-capture-architecture.md  0002-cca-fails-open.md  0003-agent-session-capture-via-cc.md  0003-agent-session-capture-via-ccagent.md
claude-dash/src/: alert.rs  budget.rs  dissect.rs  lifecycle.rs  main.rs  proxy.rs  record.rs  status.rs  store.rs  throughput.rs  transcripts.rs  tui.rs
claude/agents/: code-simplifier.md  ui-prettifier.md
claude/skills/implement-issues/: SKILL.md  agent-brief.md
claude/skills/nootkify/: SKILL.md  brand-reference.md  brand-tokens.css
claude/skills/orchestrate/: SKILL.md
ghostty/: config
screenshot/: install.sh
skiff/: Cargo.toml
skiff/src/: main.rs
starship/: starship.toml
wt/: CONTEXT.md  Cargo.toml
wt/src/: main.rs
wt/tests/: init.rs  new.rs  rm.rs
wt/tests/common/: mod.rs
zsh/: .zshrc
